# Study_web_13_2

./: README.md  pyproject.toml
hm_project/: db.sqlite3
hm_project/hm_project/: asgi.py  settings.py  urls.py  wsgi.py
hm_project/quotes/: forms.py  models.py  urls.py  utils.py  views.py
hm_project/quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py
hm_project/quotes/static/quotes/: style.css
hm_project/quotes/templates/quotes/: add_author.html  add_quote.html  author_detail.html  base.html  index.html
hm_project/quotes/templatetags/: extract.py
hm_project/users/: email.py  forms.py  urls.py  views.py
hm_project/users/templates/users/: login.html  password_reset.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_sent.html  register.html
hm_project/utils/: add_quotes_to_mongo.py  migrate_mongo_to_postgres.py  migration.py
